# itmo_dl_nlp_courses

./: .gitignore  README.md  hw_1.ipynb  hw_2.ipynb  hw_3.ipynb  hw_4.ipynb  hw_5.ipynb  pyproject.toml  test.ipynb
