[tool.poetry]
name = "dl-nlp-courses"
version = "0.1.0"
description = ""
authors = ["vilovnok <vilovnok@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.2.4"
matplotlib = "^3.10.1"
nltk = "^3.9.1"
torch = "^2.6.0"
tqdm = "^4.67.1"
subword-nmt = "^0.3.8"
transformers = "^4.49.0"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
